# bot-biblioteca

./: .env.example  .gitignore  Cargo.toml  DOCUMENTACAO_TECNICA.md  Dockerfile  Dockerfile.dev  README.md  discloud.config  docker-compose.dev.yml  docker-compose.yml  scratch_fix.rs
.omo/run-continuation/: ses_12a613419ffe6NjArc0lBLROhQ.json  ses_12eb98873ffeUVlHpk5ddggGm7.json  ses_12f366686ffe5OD24qEARD9Ivq.json
config/: assets.toml
migrations/: 001_initial_schema.sql  002_custom_cards.sql
src/: dashboard.rs  lib.rs  main.rs  state.rs
src/asset_manager/: mod.rs
src/cache/: mod.rs
src/commands/: addticket.rs  admin.rs  botstats.rs  card.rs  claimticket.rs  clearuser.rs  closeticket.rs  config.rs  configlogs.rs  emoji.rs  figurinha.rs  help.rs  info.rs  lastcall.rs  lockdown.rs  lookup.rs  mod.rs  modulos.rs  names.rs  nuke.rs  owner.rs  privacy.rs  raidmode.rs  reacao.rs  removeticket.rs  setup.rs  setup_frin.rs  shutdown.rs  stats.rs  sync.rs  ticket.rs  ticketpanel.rs  userinfo.rs  verification.rs  voicehistory.rs  voicerank.rs
src/config/: mod.rs
src/database/: mod.rs
src/dto/: mod.rs
src/embeds/: custom_card.rs  mod.rs
src/errors/: mod.rs
src/events/: guild_member_add.rs  guild_member_remove.rs  guild_member_update.rs  interaction_create.rs  message_create.rs  message_delete.rs  message_update.rs  mod.rs  presence_update.rs  ready.rs  user_update.rs  voice_state_update.rs
src/jobs/: mod.rs  voice_sync.rs
src/models/: custom_card.rs  guild.rs  mod.rs  user.rs  voice_session.rs
src/permissions/: mod.rs
src/repositories/: guild_repo.rs  (+5 more)
(+12 files in other folders)
