[package]
name = "bibliotecaria"
version = "0.1.0"
edition = "2021"
description = "Discord server management bot"

[dependencies]
serenity = { version = "0.12", default-features = false, features = ["client", "gateway", "model", "utils", "cache", "http", "rustls_backend", "chrono"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "chrono", "uuid", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
axum = { version = "0.7", features = ["json"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
dashmap = "6"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
base64 = "0.22"
thiserror = "2"
toml = "0.8"

[profile.release]
opt-level = 3
lto = "thin"
strip = true
